spec/lib/cli/log/errors/codeFolderUndefined.js
// Generated by CoffeeScript 1.12.3
(function() {
  'use strict';
  module.exports = function(dd) {
    return dd.drive({
      it: 'returns `codeFolderUndefined` error message',
      i: [],
      e: 'Code folder definition missing'
    });
  };

}).call(this);
